# syrinc

./: CMakeLists.txt  README.md  a.out  tests.cpp
cmake/: uninstall.cmake
docs/: README.md  offsetcorrection.md
src/cli/: cli.cpp
src/include/: debug.hpp  globals.hpp
src/include/modules/: correctlineoffset.hpp  timestampconv.hpp  tokens.hpp
src/include/modules/audio/: metadata.hpp
src/include/modules/lrc-core/: line.hpp  process.hpp  tag.hpp  timestamp.hpp  token.hpp
src/modules/: correctlineoffset.cpp  lrcfilerewriter.cpp  timestampconv.cpp  tokens.cpp
src/modules/audio/: metadata.cpp
src/modules/lrc-core/: line.cpp  process.cpp  tag.cpp  timestamp.cpp  token.cpp
tests/: audio.cpp  audio.flac  lrc-core.cpp  test1.lrc  test2.lrc  test3.lrc  tests.cpp
